# foundationdb-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  appveyor.yml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
bindingtester/: all.html  enum.InstrCode.html  enum.TransactionState.html  fn.has_opt.html  fn.main.html  fn.mutation_from_str.html  fn.range.html  fn.streaming_from_value.html  fn.strinc.html  index.html  sidebar-items.js  static.ERROR_MULTIPLE.html  static.ERROR_NONE.html  static.GOT_APPROXIMATE_SIZE.html  static.GOT_COMMITTED_VERSION.html  static.GOT_READ_VERSION.html  static.OK.html  static.RESULT_NOT_PRESENT.html  static.WAITED_FOR_EMPTY.html  struct.Instr.html  struct.StackItem.html  struct.StackMachine.html  struct.StackResult.html  type.StackFuture.html
fdb_bench/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Bench.html  struct.Counter.html  struct.Opt.html
foundationdb/: Cargo.toml  README.md  all.html  build.rs  fn.boot.html  fn.boot_async.html  fn.default_config_path.html  index.html  sidebar-items.js  struct.Database.html  struct.FdbError.html  struct.KeySelector.html  struct.RangeOption.html  struct.TransactOption.html  struct.Transaction.html  struct.TransactionCancelled.html  struct.TransactionCommitError.html  struct.TransactionCommitted.html  trait.DatabaseTransact.html  trait.TransactError.html  type.FdbResult.html
foundationdb-bench/: Cargo.toml
foundationdb-bindingtester/: Cargo.toml  README.md
foundationdb-bindingtester/src/: main.rs
foundationdb-gen/: Cargo.toml  README.md
foundationdb-gen/src/: lib.rs
foundationdb-sys/: Cargo.toml  README.md  build.rs  wrapper.h
foundationdb-sys/include/600/: fdb_c_options.g.h
foundationdb-sys/include/620/: fdb_c_options.g.h
foundationdb-sys/include/630/: fdb_c_options.g.h
foundationdb-sys/src/: bindings.rs  lib.rs
foundationdb/api/: fn.get_max_api_version.html  index.html  sidebar-items.js  struct.FdbApiBuilder.html  struct.NetworkAutoStop.html  struct.NetworkBuilder.html  struct.NetworkRunner.html  struct.NetworkStop.html  struct.NetworkWait.html
foundationdb/database/: struct.Database.html  struct.TransactOption.html  trait.DatabaseTransact.html  trait.TransactError.html
foundationdb/error/: struct.FdbError.html  type.FdbResult.html
foundationdb/examples/: README.md  class-scheduling.rs  class_scheduling.rs  hello.rs  range.rs
foundationdb/future/: index.html  sidebar-items.js  struct.FdbAddress.html  struct.FdbAddresses.html  struct.FdbKeyValue.html  struct.FdbSlice.html  struct.FdbValue.html  struct.FdbValues.html  struct.FdbValuesIter.html
foundationdb/keyselector/: struct.KeySelector.html
foundationdb/options/: enum.ConflictRangeType.html  enum.DatabaseOption.html  enum.ErrorPredicate.html  enum.MutationType.html  enum.NetworkOption.html  enum.StreamingMode.html  enum.TransactionOption.html  index.html  sidebar-items.js
foundationdb/src/: api.rs  cluster.rs  context.rs  database.rs  error.rs  fdb_api.rs  future.rs  hca.rs  keyselector.rs  lib.rs  network.rs  options.rs  subspace.rs  transaction.rs  tuple.rs
foundationdb/src/directory/: directory.rs  directory_layer.rs  directory_partition.rs  directory_subspace.rs  error.rs  mod.rs  node.rs
foundationdb/src/tuple/: de.rs  element.rs  hca.rs  item.rs  mod.rs  pack.rs  ser.rs  single.rs  subspace.rs  versionstamp.rs
foundationdb/tests/: api.rs  api_ub.rs  atomic.rs  directory.rs  future.rs  get.rs  hca.rs  network.rs  range.rs  range_2.rs  tokio.rs  tokio_async.rs  transact.rs  watch.rs
foundationdb/tests/common/: mod.rs
foundationdb/transaction/: struct.RangeOption.html  struct.Transaction.html  struct.TransactionCancelled.html  struct.TransactionCommitError.html  struct.TransactionCommitted.html
foundationdb/tuple/: enum.Element.html  enum.PackError.html  enum.VersionstampOffset.html  fn.pack.html  fn.pack_into.html  fn.pack_into_with_versionstamp.html  fn.pack_with_versionstamp.html  fn.unpack.html  index.html  sidebar-items.js  struct.Bytes.html  struct.Subspace.html  struct.TupleDepth.html  struct.Uuid.html  struct.Versionstamp.html  trait.TuplePack.html  trait.TupleUnpack.html  type.PackResult.html
foundationdb/tuple/element/: enum.Element.html
foundationdb/tuple/hca/: enum.HcaError.html  index.html  sidebar-items.js  struct.HighContentionAllocator.html
foundationdb/tuple/pack/: enum.VersionstampOffset.html  trait.TuplePack.html  trait.TupleUnpack.html
foundationdb/tuple/subspace/: struct.Subspace.html
foundationdb/tuple/versionstamp/: struct.Versionstamp.html
foundationdb_bench/: all.html  index.html
foundationdb_gen/: all.html  fn.emit.html  index.html  sidebar-items.js
foundationdb_options_gen/: all.html  fn.main.html  index.html
foundationdb_sys/: all.html  constant.FDBConflictRangeType_FDB_CONFLICT_RANGE_TYPE_READ.html  constant.FDBConflictRangeType_FDB_CONFLICT_RANGE_TYPE_WRITE.html  constant.FDBDatabaseOption_FDB_DB_OPTION_DATACENTER_ID.html  constant.FDBDatabaseOption_FDB_DB_OPTION_LOCATION_CACHE_SIZE.html  constant.FDBDatabaseOption_FDB_DB_OPTION_MACHINE_ID.html  constant.FDBDatabaseOption_FDB_DB_OPTION_MAX_WATCHES.html  constant.FDBDatabaseOption_FDB_DB_OPTION_SNAPSHOT_RYW_DISABLE.html  constant.FDBDatabaseOption_FDB_DB_OPTION_SNAPSHOT_RYW_ENABLE.html  constant.FDBDatabaseOption_FDB_DB_OPTION_TRANSACTION_CAUSAL_READ_RISKY.html  constant.FDBDatabaseOption_FDB_DB_OPTION_TRANSACTION_INCLUDE_PORT_IN_ADDRESS.html  constant.FDBDatabaseOption_FDB_DB_OPTION_TRANSACTION_LOGGING_MAX_FIELD_LENGTH.html  constant.FDBDatabaseOption_FDB_DB_OPTION_TRANSACTION_MAX_RETRY_DELAY.html  constant.FDBDatabaseOption_FDB_DB_OPTION_TRANSACTION_RETRY_LIMIT.html  constant.FDBDatabaseOption_FDB_DB_OPTION_TRANSACTION_SIZE_LIMIT.html  constant.FDBDatabaseOption_FDB_DB_OPTION_TRANSACTION_TIMEOUT.html  constant.FDBErrorPredicate_FDB_ERROR_PREDICATE_MAYBE_COMMITTED.html  constant.FDBErrorPredicate_FDB_ERROR_PREDICATE_RETRYABLE.html  constant.FDBErrorPredicate_FDB_ERROR_PREDICATE_RETRYABLE_NOT_COMMITTED.html  (+309 more)
scripts/: run_bindingtester.sh  (+5 more)
(+64 files in other folders)
