[features]
default = ["fdb-6_0", "uuid"]

fdb-5_1 = [ "foundationdb/fdb-5_1" ]
fdb-5_2 = [ "foundationdb/fdb-5_2" ]
fdb-6_0 = [ "foundationdb/fdb-6_0" ]

uuid = [ "foundationdb/uuid" ]

[workspace]
members = ["foundationdb", 
           "foundationdb-sys",
           "foundationdb-gen",
           "foundationdb-bench"]

[profile.release]
debug = true
