[package]
name = "foundationdb-bench"
version = "0.4.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>", 
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Bindings to the C api for FoundationDB
"""

repository = "https://github.com/bluejekyll/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/foundationdb-rs" }


[dependencies]
rand = "0.6"
futures = "0.3.0"
foundationdb = { version = "*", path = "../foundationdb" }
stopwatch = "0"
log = "0.4"
env_logger = "0.7"
structopt = "0.2"

[build-dependencies]
