[package]
name = "foundationdb-bench"
version = "0.4.2"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Bindings to the C api for FoundationDB
"""

repository = "https://github.com/bluejekyll/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/foundationdb-rs" }


[dependencies]
env_logger = "0.7.1"
foundationdb = { version = "*", path = "../foundationdb" }
futures = "0.3.0"
log = "0.4.8"
rand = "0.7.2"
stopwatch = "0.0.7"
structopt = "0.3.3"

[build-dependencies]
