[package]
name = "foundationdb-bench"
version = "0.5.1"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Bindings to the C api for FoundationDB
"""

repository = "https://github.com/Clikengo/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.8.1"
foundationdb = { version = "*", path = "../foundationdb" }
futures = "0.3.0"
log = "0.4.8"
rand = "0.7.2"
stopwatch = "0.0.7"
structopt = "0.3.3"
