[package]
name = "foundationdb-bindingtester"
version = "0.4.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>", 
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Bindings to the C api for FoundationDB
"""

repository = "https://github.com/bluejekyll/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/foundationdb-rs" }

[dependencies]
env_logger = "0.6"
foundationdb = { path = "../foundationdb", features = ["serde"] }
foundationdb-sys = { version = "0.2.0", path = "../foundationdb-sys", default-features = false }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
log = "0.4"
serde = { version = "1.0.102" }
structopt = "0.2"
