[package]
name = "bindingtester"
version = "0.5.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Bindings to the C api for FoundationDB
"""

repository = "https://github.com/Clikengo/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.7.1"
foundationdb = { path = "../foundationdb", features = ["uuid", "num-bigint"] }
foundationdb-sys = { version = "0.5.0", path = "../foundationdb-sys", default-features = false }
futures = "0.3.0"
log = "0.4.8"
num-bigint = "0.3.0"
structopt = "0.3.3"
