[package]
name = "foundationdb-gen"
version = "0.4.0"
authors = [
    "Jihyun Yu <yjh0502@gmail.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Binding generation helper for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/bluejekyll/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[badges]
travis-ci = { repository = "bluejekyll/foundationdb-rs" }

[dependencies]
failure = "0.1.6"
xml-rs = "0.8.0"
