[package]
name = "foundationdb-gen"
version = "0.1.0"
authors = [
    "Jihyun Yu <yjh0502@gmail.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
description = """
Binding generation helper for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/bluejekyll/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[package.metadata.docs.rs]
features = [ "embedded-fdb-include" ]

[badges]
codecov = { repository = "Clikengo/foundationdb-rs", branch = "0.3", service = "github" }

[features]
default = [ "fdb-6_0" ]
# Use the locally embedded foundationdb fdb.options file
embedded-fdb-include = [ ]
fdb-5_1 = [ ]
fdb-5_2 = [ ]
fdb-6_0 = [ ]

[dependencies]
failure = "0.1"
Inflector = "0.11"
xml-rs = "0.8"
