[package]
name = "foundationdb-gen"
version = "0.5.0"
authors = [
    "Jihyun Yu <yjh0502@gmail.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Binding generation helper for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/Clikengo/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[package.metadata.docs.rs]
features = [ "embedded-fdb-include" ]

[badges]
codecov = { repository = "Clikengo/foundationdb-rs", branch = "master", service = "github" }

[features]
default = [ "fdb-6_1" ]
# Use the locally embedded foundationdb fdb.options file
embedded-fdb-include = [ ]
fdb-5_1 = [ ]
fdb-5_2 = [ ]
fdb-6_0 = [ ]
fdb-6_1 = [ ]
fdb-6_2 = [ ]

[dependencies]
failure = "0.1.6"
xml-rs = "0.8.0"
