[package]
name = "foundationdb-sys"
version = "0.2.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

description = """
Bindings to the C api for FoundationDB
"""

documentation = "https://docs.rs/foundationdb-sys"
repository = "https://github.com/bluejekyll/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/foundationdb-rs" }
# codecov = { repository = "bluejekyll/foundationdb-rs", branch = "master", service = "github" }

[features]
default = [ "fdb-6_1" ]

fdb-5_1 = [ ]
fdb-5_2 = [ ]
fdb-6_0 = [ ]
fdb-6_1 = [ ]

[dependencies]

[build-dependencies]
bindgen = "0.50"
