[package]
name = "foundationdb-sys"
version = "0.2.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
description = """
Bindings to the C api for FoundationDB
"""

documentation = "https://docs.rs/foundationdb-sys"
repository = "https://github.com/bluejekyll/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[package.metadata.docs.rs]
features = [ "embedded-fdb-include" ]

[badges]
codecov = { repository = "Clikengo/foundationdb-rs", branch = "0.3", service = "github" }

[features]
default = [ "fdb-6_0" ]
# Use the locally embedded foundationdb fdb_c.h file
embedded-fdb-include = [ ]
fdb-5_1 = [ ]
fdb-5_2 = [ ]
fdb-6_0 = [ ]

[dependencies]

[build-dependencies]
bindgen = "0.51"
