[package]
name = "foundationdb-sys"
version = "0.4.2"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
Bindings to the C api for FoundationDB
"""

documentation = "https://docs.rs/foundationdb-sys"
repository = "https://github.com/bluejekyll/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[package.metadata.docs.rs]
features = [ "embedded-fdb-include" ]

[badges]
codecov = { repository = "Clikengo/foundationdb-rs", branch = "master", service = "github" }

[features]
default = [ "fdb-6_1" ]
# Use the locally embedded foundationdb fdb_c.h file
embedded-fdb-include = [ ]
fdb-5_1 = [ ]
fdb-5_2 = [ ]
fdb-6_0 = [ ]
fdb-6_1 = [ ]
fdb-6_2 = [ ]

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
