[package]
name = "foundationdb"
version = "0.3.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
description = """
High level client bindings for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/bluejekyll/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[package.metadata.docs.rs]
features = [ "embedded-fdb-include" ]

[badges]
codecov = { repository = "Clikengo/foundationdb-rs", branch = "0.3", service = "github" }

[features]
default = ["fdb-6_0", "uuid"]
# Use the locally embedded foundationdb fdb_c.h and fdb.options files
embedded-fdb-include = [ "foundationdb-sys/embedded-fdb-include", "foundationdb-gen/embedded-fdb-include" ]
fdb-5_1 = [ "foundationdb-sys/fdb-5_1", "foundationdb-gen/fdb-5_1" ]
fdb-5_2 = [ "foundationdb-sys/fdb-5_2", "foundationdb-gen/fdb-5_2" ]
fdb-6_0 = [ "foundationdb-sys/fdb-6_0", "foundationdb-gen/fdb-6_0" ]

[build-dependencies]
foundationdb-gen = { version = "0.1.0", path = "../foundationdb-gen" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"
foundationdb-sys = { version = "0.2.0", path = "../foundationdb-sys", default-features = false }
futures = "0.1"
lazy_static = "1.0"
byteorder = "1.2"
log = "0.4"
uuid = { version = "0.7", optional = true }
rand = "0.7.0"
static_assertions = "1.1"

[dev-dependencies]
rand = "0.7"
