[package]
name = "foundationdb"
version = "0.5.1"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2018"

description = """
High level client bindings for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/Clikengo/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[package.metadata.docs.rs]
features = ["embedded-fdb-include"]

[badges]
codecov = { repository = "Clikengo/foundationdb-rs", branch = "master", service = "github" }

[features]
default = ["fdb-6_2", "uuid"]
# Use the locally embedded foundationdb fdb_c.h and fdb.options files
embedded-fdb-include = [
    "foundationdb-sys/embedded-fdb-include",
    "foundationdb-gen/embedded-fdb-include",
]
fdb-5_1 = ["foundationdb-sys/fdb-5_1", "foundationdb-gen/fdb-5_1"]
fdb-5_2 = ["foundationdb-sys/fdb-5_2", "foundationdb-gen/fdb-5_2"]
fdb-6_0 = ["foundationdb-sys/fdb-6_0", "foundationdb-gen/fdb-6_0"]
fdb-6_1 = ["foundationdb-sys/fdb-6_1", "foundationdb-gen/fdb-6_1"]
fdb-6_2 = ["foundationdb-sys/fdb-6_2", "foundationdb-gen/fdb-6_2"]

[build-dependencies]
foundationdb-gen = { version = "0.5.1", path = "../foundationdb-gen", default-features = false }

[dependencies]
foundationdb-sys = { version = "0.5.1", path = "../foundationdb-sys", default-features = false }
futures = "0.3.1"
memchr = "2.2.1"
rand = { version = "0.8.2", features = ["default", "small_rng"] }
static_assertions = "1.1.0"
uuid = { version = "0.8.1", optional = true }
num-bigint = { version = "0.3.0", optional = true }

[dev-dependencies]
byteorder = "1.3.2"
lazy_static = "1.4.0"
log = "0.4.8"
tokio = { version = "0.2.9", features = ["rt-core", "rt-threaded", "macros"] }
